--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bangladesh</title>
     <link rel="stylesheet" href="styles/assignment_style.css">
 </head>
-<body>
+<body class="">
     <header>
         <div class="banner">
             <div class="banner_content">
@@ -20,7 +20,33 @@
     </header>
 
     <main>
+       <section class="vision">
+           <div class="vision_content">
+               <h2 class="vision_title">The Vision of Future</h2>
+               <p class="vision_descri">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+           </div>
 
+           <div class="future_content">
+               <div class="future_need1 width_padding_radius">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="future_title">Digital Transformation</h3>
+                <h4 class="future_discri">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</h4>
+                <button class="btn_secondary1 btn_primary">Learn More</button>
+               </div>
+               <div class="future_need2 width_padding_radius">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="future_title">Green Energy</h3>
+                <h4 class="future_discri">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</h4>
+                <button class="btn_secondary2 btn_primary">Learn More</button>
+               </div>
+               <div class="future_need3 width_padding_radius">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="future_title">Modern Infrastructure</h3>
+                <h4 class="future_discri">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</h4>
+                <button class="btn_secondary3 btn_primary">Learn More</button>
+               </div>
+           </div>
+       </section>
     </main>
 
     <footer>
