--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <main>
+        <!-- vision_future_section -->
        <section class="vision">
            <div class="vision_content">
                <h2 class="vision_title">The Vision of Future</h2>
@@ -46,6 +47,53 @@
                 <button class="btn_secondary3 btn_primary">Learn More</button>
                </div>
            </div>
+       </section>
+           
+       <!-- Resent news Section -->
+       <section class="news">
+           <div class="news_intro">
+            <h2 class="news_title">Recent News</h2>
+            <p class="news_discri">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+           </div>
+          <div class="news_content">
+              <div class="braking_news_content1">
+                
+                 <img width="350px" height="300px" src="assets/satelite.png" alt="">
+                 <div class="braking_news1">
+                    <h4 class="braking_news_title">Bangladesh Launches New Satellite</h4>
+                     <img src="assets/al-jazeera.png" alt="">
+                     <p class="braking_news_discri">Date: 5/07/2025 Time: 10:25 PM</p>
+                     <p class="braking_news_discri">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <div class="btn_primary btn_color">Read More</div>
+                 </div>
+              </div>
+
+              <div class="braking_news_content2">
+                <div class="braking_news2">
+                <h4 class="braking_news_title">Bangladesh Launches New Satellite</h4>
+                <img src="assets/al-jazeera.png" alt="">
+                <p class="braking_news_discri">Date: 9/01/2025 Time: 7:56PM</p>
+                <p class="braking_news_discri">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <div class="btn_primary btn_color">Read More</div>
+            </div>
+                <img width="350px" height="300px" src="assets/satelite.png" alt="">
+              </div>
+
+              <div class="braking_news_content1">
+                <img  width="350px" height="300px" src="assets/satelite.png" alt="">
+                <div class="braking_news1">
+                   <h4 class="braking_news_title">Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p class="braking_news_discri">Date: 5/07/2025 Time: 10:25 PM</p>
+                    <p class="braking_news_discri">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                       with a certain degree of justification, be able to speak of humankind as civilized</p>
+                       <div class="btn_primary btn_color">Read More</div>
+                </div>
+             </div>
+          </div>
+          </div>
        </section>
     </main>
 
