--- a/index.html
+++ b/index.html
@@ -95,6 +95,37 @@
           </div>
           </div>
        </section>
+
+       <!-- DONATE Section -->
+        <section class="donate">
+            <div class="donate_content">
+                <h2 class="news_title">Donate Today</h2>
+                <p class="future_discri">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+
+            <div class="taka_content">
+                <div class="taka_box">
+                    <h3 class="taka_amt">100 Taka</h3>
+                </div>
+                <div class="taka_box one_box_color">
+                    <h3 class="taka_amt">200 Taka</h3>
+                </div>
+                <div class="taka_box">
+                    <h3 class="taka_amt">500 Taka</h3>
+                </div>
+                <div class="taka_box">
+                    <h3 class="taka_amt">1000 Taka</h3>
+                </div>
+            </div>
+            <div class="donate_input">
+              <!-- <form> -->
+                <input type="number" name="" id="" placeholder="Other Amount (Taka)">
+              <!-- </form> -->
+            </div>
+            <div class="justify">
+            <div class="btn_primary btn_color ">Done Now</div>
+            </div>
+        </section>
     </main>
 
     <footer>
