added_subscriber_section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <button class="btn_secondary3 btn_primary">Learn More</button>
                </div>
            </div>
+
+           <div class="yunus">
+                
+           </div>
        </section>
            
        <!-- Resent news Section -->
@@ -132,7 +136,17 @@
     </main>
 
     <footer>
-
+        <section class="Subsci">
+           <div class="subsci_content">
+              <h2 class="news_title">Subscribe Newsletter</h2>
+              <p class="subsci_discri">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+              <div class="email_subsc">
+              <input type="email" name="" id="" placeholder="Enter your email here">
+              <button class="btn_primary btn_color ">Subscribe</button>
+            </div>
+            <p class="subsci_discri">We promise not to spam you!</p>
+           </div>
+        </section>
     </footer>
 </body>
 </html>
